--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,5 +3,7 @@ server.port=8095
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
 spring.datasource.username=postgres
-spring.datasource.password=platzi
+spring.datasource.password=aahs.2002
 spring.jpa.database=postgresql
+spring.jpa.hibernate.connection.charset=
+spring.jpa.hibernate.connection.characterEncoding=
