--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,11 @@ dependencies {
 
 	runtimeOnly 'org.postgresql:postgresql'
 
-	implementation 'org.mapstruct:mapstruct:1.3.1.Final'
-	annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+	compileOnly'org.projectlombok:lombok:1.18.12'
+	annotationProcessor 'org.projectlombok:lombok:1.18.2'
+
+	compileOnly 'org.mapstruct:mapstruct:1.4.0.Final'
+	annotationProcessor 'org.mapstruct:mapstruct processor:1.4.0.Final'
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
